tests/ui/numbers-arithmetic/overflowing-lsh-2.stderr
error: this arithmetic operation will overflow
  --> $DIR/overflowing-lsh-2.rs:7:14
   |
LL |     let _x = 1 << -1;
   |              ^^^^^^^ attempt to shift left by `-1_i32`, which would overflow
   |
note: the lint level is defined here
  --> $DIR/overflowing-lsh-2.rs:4:9
   |
LL | #![deny(arithmetic_overflow)]
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

